--- a/rm_add_element_DOM/index.html
+++ b/rm_add_element_DOM/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <input class="input" type="text" id="inputMsg" placeholder="Введи повідомлення" />
-    <button class="add-button" id="addBtn">Додати</button>
-    <button class="rm-button" id="clearBtn">Очистити все</button>
+    <button class="button" id="addBtn">Додати</button>
+    <button class="button" id="clearBtn">Очистити все</button>
+    <button class="button" id="themeBtn">Темна тема</button>
     <div class="msg" id="messages"></div>
     <script src="logic.js"></script>
 </body>
