clean_input_btns

--- a/rm_add_element_DOM/index.html
+++ b/rm_add_element_DOM/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <input class="input" type="text" id="inputName" placeholder="Введи ім'я" />
+    <button class="button" id="cleanName">X</button>
     <input class="input" type="text" id="inputMsg" placeholder="Введи повідомлення" />
+    <button class="button" id="cleanComment">X</button>
     <button class="button" id="addBtn">Додати</button>
     <button class="button" id="clearBtn">Очистити все</button>
     <button class="button" id="themeBtn">Темна тема</button>
