--- a/rm_add_element_DOM/index.html
+++ b/rm_add_element_DOM/index.html
@@ -14,6 +14,7 @@
     <button class="button" id="addBtn">Додати</button>
     <button class="button" id="clearBtn">Очистити все</button>
     <button class="button" id="themeBtn">Темна тема</button>
+    <div class="errors" id="errorMessages"></div>
     <div class="msg" id="messages"></div>
     <script src="logic.js"></script>
 </body>
